<resources>
    <string name="app_name">VIDAC</string>

    <string name="txt_bienvenida">¡Bienvenid@ a VIDAC!</string>
    <string name="txt_pregunta">¿Qué desea hacer?</string>
    <string name="txt_inicioSesion">Inicio de sesión</string>
    <string name="txt_registro">Registro</string>

    <string name="btn_salir">SALIR</string>

    <string name="txt_login">INICIAR SESIÓN</string>
    <string name="txt_correo">Correo electrónico: </string>
    <string name="editText_correo">Correo</string>
    <string name="txt_contraseña">Contraseña: </string>
    <string name="editText_contraseña">Contraseña</string>
    <string name="btn_ingresar">INGRESAR</string>

    <string name="txt_tituloRegistro">REGISTRO</string>
    <string name="txt_preguntaRegistro">¿Cómo se desea registrar?</string>
    <string name="txt_ser">Servicio</string>
    <string name="txt_cliente">Cliente</string>
    <string name="btn_regresar">REGRESAR</string>

    <string name="txt_registroCliente">Registro de Cliente</string>

    <string name="txt_registroServicio">Registro de Servicio</string>

    <string name="Nombres">Nombre(s)</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Edad">Edad</string>
    <string name="Telefono">Telefono</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Genero">Genero</string>
    <string name="Parentesco">Parentesco</string>
    <string name="Registrar">Registrar</string>
    <string name="Horario">Horario</string>
    <string name="Direccion">Direccion</string>
    <string name="Descripcion">Descripcion</string>

    <string-array name="Genero">
        <item>Seleccione el genero...</item>
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string-array name="Tipo">
        <item>Seleccione el tipo de servicio...</item>
        <item>Doctor</item>
        <item>Enfermero</item>
        <item>Barbero</item>
    </string-array>

    <string name="txt_servicios">SERVICIOS</string>
    <string name="txt_doctores">Doctores</string>
    <string name="txt_enfermeros">Enfermeros</string>
    <string name="txt_farmacias">Farmacias</string>
    <string name="txt_restaurantes">Restaurantes</string>
    <string name="txt_actividades">Actividades</string>
    <string name="txt_barberias">Barberías</string>
    <string name="txt_mensajeros">Mensajeros</string>

</resources>
