<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio_sesion">

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/editText_correo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="431dp"
        android:layout_marginEnd="97dp"
        android:ems="10"
        android:hint="@string/editText_contraseña"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="162dp"
        android:layout_marginBottom="74dp"
        android:text="@string/btn_ingresar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:background="@color/inicioSesion"
        android:text="@string/txt_login"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="97dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="155dp"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="302dp"
        android:text="@string/txt_correo"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="169dp"
        android:layout_marginBottom="218dp"
        android:text="@string/txt_contraseña"
        android:textColor="@android:color/black" />
</RelativeLayout>