<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/txt_titReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="162dp"
        android:background="#3E9C27B0"
        android:text="@string/txt_tituloRegistro"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_preguntaReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="281dp"
        android:text="@string/txt_preguntaRegistro"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/imageReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        app:srcCompat="@drawable/imagen_registro" />

    <ImageButton
        android:id="@+id/imBu_servicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="101dp"
        android:layout_marginBottom="236dp"
        app:srcCompat="@drawable/servicio" />

    <ImageButton
        android:id="@+id/imBu_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="235dp"
        app:srcCompat="@drawable/cliente" />

    <TextView
        android:id="@+id/txt_servicioReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginBottom="206dp"
        android:text="@string/txt_ser"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txt_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="208dp"
        android:text="@string/txt_cliente"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/regresar"
        android:text="@string/btn_regresar" />
</RelativeLayout>