<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txt_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="89dp"
        android:text="@string/txt_bienvenida"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        app:srcCompat="@drawable/logo_vidac" />

    <TextView
        android:id="@+id/txt_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="312dp"
        android:text="@string/txt_pregunta"
        android:textColor="@android:color/black" />

    <ImageButton
        android:id="@+id/imBu_InicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="79dp"
        android:layout_marginBottom="192dp"
        app:srcCompat="@drawable/inicio_sesion" />

    <ImageButton
        android:id="@+id/imBu_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="196dp"
        app:srcCompat="@drawable/registro" />

    <TextView
        android:id="@+id/txt_inicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="159dp"
        android:text="@string/txt_inicioSesion"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txt_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="161dp"
        android:text="@string/txt_registro"
        android:textColor="@android:color/background_dark" />

</RelativeLayout>